--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ outcome==1.3.0.post0
 plyer==2.1.0
 pycparser==2.21
 PySocks==1.7.1
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
 selenium==4.18.1
