--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
 h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
@@ -23,6 +25,7 @@ selenium==4.18.1
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+SQLAlchemy==2.0.29
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.10.0
