--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 APScheduler==3.10.4
 attrs==23.2.0
 blinker==1.7.0
@@ -7,12 +8,14 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
+Mako==1.3.2
 MarkupSafe==2.1.5
 outcome==1.3.0.post0
 plyer==2.1.0
